fix(decision-table): correct select box z-index

--- a/packages/dmn-js-decision-table/assets/css/dmn-js-decision-table.css
+++ b/packages/dmn-js-decision-table/assets/css/dmn-js-decision-table.css
@@ -123,7 +123,7 @@ table tr > .input + .output {
   bottom: -1px;
   right: -1px;
   border: solid 2px #4285f4;
-  z-index: 20;
+  z-index: 1;
   pointer-events: none;
 }
 
